source/blender/blenloader/BLO_read_write.hh
@@ -33,6 +33,11 @@
 
 #include "DNA_windowmanager_types.h" /* for eReportType */
 
+#include "BLI_function_ref.hh"
+
+namespace blender {
+class ImplicitSharingInfo;
+}
 struct BlendDataReader;
 struct BlendFileReadReport;
 struct BlendLibReader;
@@ -183,6 +188,21 @@ void BLO_write_string(BlendWriter *writer, const char *data_ptr);
 /* Misc. */
 
 /**
+ * Check if the data can be written more efficiently by making use of implicit-sharing. If yes, the
+ * user count of the sharing-info is increased making the data immutable. The provided callback
+ * should serialize the potentially shared data. It is only called when necessary.
+ *
+ * \param approximate_size_in_bytes: Used to be able to approximate how large the undo step is in
+ * total.
+ * \param write_fn: Use the #BlendWrite to serialize the potentially shared data.
+ */
+void BLO_write_shared(BlendWriter *writer,
+                      const void *data,
+                      size_t approximate_size_in_bytes,
+                      const blender::ImplicitSharingInfo *sharing_info,
+                      blender::FunctionRef<void()> write_fn);
+
+/**
  * Sometimes different data is written depending on whether the file is saved to disk or used for
  * undo. This function returns true when the current file-writing is done for undo.
  */
@@ -244,6 +264,26 @@ void BLO_read_double_array(BlendDataReader *reader, int array_size, double **ptr
 void BLO_read_pointer_array(BlendDataReader *reader, void **ptr_p);
 
 /* Misc. */
+
+void blo_read_shared_impl(BlendDataReader *reader,
+                          void *data,
+                          const blender::ImplicitSharingInfo **r_sharing_info,
+                          blender::FunctionRef<const blender::ImplicitSharingInfo *()> read_fn);
+
+/**
+ * Check if there is any shared data for the given data pointer. If yes, return the existing
+ * sharing-info. If not, call the provided function to actually read the data now.
+ */
+template<typename T>
+const blender::ImplicitSharingInfo *BLO_read_shared(
+    BlendDataReader *reader,
+    T **data_ptr,
+    blender::FunctionRef<const blender::ImplicitSharingInfo *()> read_fn)
+{
+  const blender::ImplicitSharingInfo *sharing_info;
+  blo_read_shared_impl(reader, *data_ptr, &sharing_info, read_fn);
+  return sharing_info;
+}
 
 int BLO_read_fileversion_get(BlendDataReader *reader);
 bool BLO_read_requires_endian_switch(BlendDataReader *reader);
